# vcmi

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
AI/BattleAI/: BattleAI.cpp
AI/Nullkiller/: AIGateway.cpp
AI/StupidAI/: StupidAI.cpp
AI/VCAI/: VCAI.cpp
CI/linux/: before_install.sh
CI/linux-qt6/: before_install.sh
client/: CMakeLists.txt  CPlayerInterface.cpp  Client.cpp  ClientCommandManager.cpp  NetPacksClient.cpp
client/battle/: BattleWindow.cpp
client/lobby/: CLobbyScreen.cpp
client/mainmenu/: CMainMenu.cpp  CMainMenu.h
client/rust_vcmi/: Cargo.toml
client/rust_vcmi/src/: lib.rs  utils.rs
gear-connector-api/: Cargo.toml
gear-connector-api/src/: lib.rs  utils.rs
gear-connector/src/: connection.js  connection_view.html  index.html  load.html  load.js  lobby.html  lobby.js  main.js  styles.css
gear-connector/src-tauri/: Cargo.toml  tauri.conf.json
gear-connector/src-tauri/src/: gear_client.rs  ipfs_client.rs  lobby.rs  logic.rs  main.rs  program_io.rs  utils.rs  vcmi_server.rs
rust_vcmi/: Cargo.toml
rust_vcmi/src/: lib.rs
server/: CGameHandler.cpp  NetPacksServer.cpp
