[package]
name = "rust_vcmi"
version = "0.1.0"
edition = "2018"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gclient = { git = "https://github.com/gear-tech/gear.git" }

cxx = "1.0"
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4", default-features = false }
#wry = "0.27"
#web-view = { version = "0.7" }
#fltk = "^1.4"
#fltk-webview = "0.2"
#headless_chrome = { git = "https://github.com/atroche/rust-headless-chrome" }
#failure = "0.1.8"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
