[package]
name = "rust_vcmi"
version = "0.1.0"
edition = "2018"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gclient = { git = "https://github.com/gear-tech/gear.git" }

cxx = "1.0"
tokio = { version = "1", features = ["full"] }
hex = { version = "0.4", default-features = false }
gear-connector-api = { path = "../../gear-connector-api" }
serde_json = "1.0"
serde = "1"
once_cell = "1"
deflate = "1"
futures = "0.3"
crossbeam-channel = "0.5"
tokio-util = { version = "0.7", features = ["codec"] }
zip = "0.6"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"
