[package]
name = "gear-connector"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "window-start-dragging"] }
tauri-plugin-positioner = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-collector = "0.1.2"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt", "std"] }
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-core = { version = "0.1", features = ["valuable"] }
hex = { version = "0.4", default-features = false }
crossbeam-channel = "0.5"
once_cell = "1"
tempfile = "1"
bytes = "1"
ipfs-api-backend-hyper = "0.6"
tar = "0.4"

# gear related
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
gclient = { git = "https://github.com/gear-tech/gear.git" }

gear-connector-api = { path = "../../gear-connector-api" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
